[package]
name = "serde_mtproto"
version = "0.3.1"
description = "MTProto [de]serialization for Rust"
authors = ["Nguyen Duc My <hcpl.prog@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
homepage = "https://github.com/hcpl/serde_mtproto"
documentation = "https://docs.rs/serde_mtproto"
repository = "https://github.com/hcpl/serde_mtproto"
keywords = ["serde", "serialization", "telegram"]

[badges]
travis-ci = { repository = "hcpl/serde_mtproto" }

[workspace]
members = ["serde_mtproto_derive"]

[dependencies]
byteorder = "1.2.1"
error-chain = "0.11.0"
extprim = { version = "1.5.1", optional = true }
log = "0.4.1"
num-traits = "0.2.1"
quickcheck = { version = "0.6.2", optional = true }
serde = "1.0.32"
serde_bytes = "0.10.3"
serde_derive = "1.0.32"

[dev-dependencies]
derivative = "1.0.0"
lazy_static = "1.0.0"
lipsum = "0.4.0"
maplit = "1.0.1"
pretty_assertions = "0.5.0"
#quickcheck_derive = "0.1.0"
quickcheck_derive = { git = "https://github.com/hcpl/quickcheck_derive", branch = "further-development" }
rand = "0.4.2"
rand_derive = "0.3.1"
serde_json = "1.0.11"
serde_yaml = "0.7.3"
serde_mtproto_derive = { path = "serde_mtproto_derive", version = "0.3.1" }
toml = "0.4.5"
version-sync = "0.5.0"

[features]
default = []
nightly = ["rand/nightly", "serde/unstable"]


[[test]]
name = "regression_tests"

[[test]]
name = "serde_interop"

[[test]]
name = "version_numbers"

[[test]]
name = "with_quickcheck"
required-features = ["quickcheck"]
