[package]
name = "serde_mtproto"
version = "0.3.1"
description = "MTProto [de]serialization for Rust"
authors = ["Nguyen Duc My <hcpl.prog@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/hcpl/serde_mtproto"
documentation = "https://docs.rs/serde_mtproto"
repository = "https://github.com/hcpl/serde_mtproto"
keywords = ["serde", "serialization", "telegram"]
edition = "2018"
include = ["Cargo.toml", "LICENSE-APACHE", "LICENSE-MIT", "README.md", "src/**/*"]

[badges]
travis-ci = { repository = "hcpl/serde_mtproto" }

[workspace]
members = ["serde_mtproto_derive"]

[build-dependencies]
version_check = "0.1.5"

[dependencies]
byteorder = "1.0"
error-chain = "0.12.1"
log = "0.4"
num-traits = "0.2"
quickcheck = { version = "0.8", optional = true }
serde = "1.0"
serde_bytes = "0.11"
serde_derive = "1.0"

[dev-dependencies]
derivative = "1.0.2"
lazy_static = "1.2"
maplit = "1.0"
pretty_assertions = "0.6"
#quickcheck_derive = "0.2"
quickcheck_derive = { git = "https://github.com/hcpl/quickcheck_derive", branch = "minimum-supported-rustc" }
rand = "0.6"
serde_json = "1.0"
serde_mtproto_derive = { path = "serde_mtproto_derive", version = "=0.3.1" }  # Update in lockstep
serde_yaml = "0.8"
toml = "0.5"
version-sync = "0.8"

[features]
default = []
nightly = []
# WARNING: This Cargo feature is not intended for public usage!
# Used to test `serde_mtproto` against new unstable features in Rust language
# and Rust standard library.
test-nightly-regressions = []


[[test]]
name = "fuzz_regressions"

[[test]]
name = "regression_tests"

[[test]]
name = "serde_interop"

[[test]]
name = "version_numbers"

[[test]]
name = "with_quickcheck"
required-features = ["quickcheck"]


[package.metadata.docs.rs]
features = ["quickcheck"]
