[package]
name = "serde_mtproto_derive"
version = "0.1.1"
description = "Procedural macro helper for serde_mtproto"
authors = ["Nguyen Duc My <hcpl.prog@gmail.com>"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/hcpl/serde_mtproto"
documentation = "https://docs.rs/serde_mtproto_derive"
repository = "https://github.com/hcpl/serde_mtproto"
keywords = ["serde", "serialization", "telegram"]

[lib]
proc-macro = true

[dependencies]
syn = "0.11.11"
quote = "0.3.15"
