[package]
name = "serde_mtproto_derive"
version = "0.3.1"
description = "Procedural macro helper for serde_mtproto"
authors = ["Nguyen Duc My <hcpl.prog@gmail.com>"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/hcpl/serde_mtproto"
documentation = "https://docs.rs/serde_mtproto_derive"
repository = "https://github.com/hcpl/serde_mtproto"
keywords = ["serde", "serialization", "telegram"]

[badges]
travis-ci = { repository = "hcpl/serde_mtproto" }

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "0.3"
quote = "0.5"
syn = "0.13"

[dev-dependencies]
serde_mtproto = { path = "..", version = "=0.3.1" }  # Update in lockstep
