[package]
name = "bench-nightly-test"
version = "0.0.0"
description = "Benchmark suite using nightly `test::Bencher`"
authors = ["Nguyen Duc My <hcpl.prog@gmail.com>"]
license = "MIT OR Apache-2.0"
publish = false

[dev-dependencies]
lipsum = "0.6"
rand = "0.6"
serde = "1.0"
serde_derive = "1.0"
serde_mtproto = { path = "../.." }
serde_mtproto_derive = { path = "../../serde_mtproto_derive" }
